Bug 271275 - Tab name doesn't revert immediately after running some commands
Summary: Tab name doesn't revert immediately after running some commands
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 255443 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-19 08:49 UTC by aditsu
Modified: 2012-04-20 05:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aditsu 2011-04-19 08:49:41 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

If I run a command that takes a few seconds and then finishes (example: "sleep 3"), the tab name updates with the command name but then doesn't revert afterwards, until I do something else (e.g. pressing "enter" again).
The tab title format is: %d : %n  %w


Reproducible: Always
Comment 1 Jekyll Wu 2011-07-30 19:41:51 UTC
*** Bug 271272 has been marked as a duplicate of this bug. ***
Comment 2 Jekyll Wu 2011-10-08 07:21:34 UTC
*** Bug 255443 has been marked as a duplicate of this bug. ***
Comment 3 Jekyll Wu 2011-10-22 12:23:19 UTC
After a long running command(e.g. /usr/bin/sleep 30 ) has finished, tab title(%n) does not revert until users press some key.
Comment 4 Jekyll Wu 2012-02-15 13:54:01 UTC
Git commit 5a24215022d6efb99b6dd400215e5f8fd9dc41c0 by Jekyll Wu.
Committed on 14/02/2012 at 21:19.
Pushed by jekyllwu into branch 'master'.

Take snapshot of session state periodically in the background

This comes as an complement of the existing way of taking snapshot
on keyboard activity.

The time inverval is currently 2 seconds. That interval should be
increased if it causes noticable performance penalty.
FIXED-IN:4.8.1

M  +7    -0    src/SessionController.cpp

http://commits.kde.org/konsole/5a24215022d6efb99b6dd400215e5f8fd9dc41c0
Comment 5 Jekyll Wu 2012-02-15 13:55:12 UTC
Git commit 7d56686c0c6410361d8cc05b3045d66463102c95 by Jekyll Wu.
Committed on 14/02/2012 at 21:19.
Pushed by jekyllwu into branch 'KDE/4.8'.

Take snapshot of session state periodically in the background

This comes as an complement of the existing way of taking snapshot
on keyboard activity.

The time inverval is currently 2 seconds. That interval should be
increased if it causes noticable performance penalty.
FIXED-IN:4.8.1
(cherry picked from commit 3a1f79a2f872f12a213067308148e49d2ceb4654)

M  +7    -0    src/SessionController.cpp

http://commits.kde.org/konsole/7d56686c0c6410361d8cc05b3045d66463102c95
Comment 6 Jekyll Wu 2012-02-15 19:36:40 UTC
Git commit 2cf9715edd9fb1e38afb42daca4aa7686ccccd43 by Jekyll Wu.
Committed on 15/02/2012 at 20:35.
Pushed by jekyllwu into branch 'KDE/4.8'.

Revert "Take snapshot of session state periodically in the background"

That commit causes some side effects related with monitoring
activivy/silence. Better not to include it in a minor release

This reverts commit 7d56686c0c6410361d8cc05b3045d66463102c95.

M  +0    -7    src/SessionController.cpp

http://commits.kde.org/konsole/2cf9715edd9fb1e38afb42daca4aa7686ccccd43