Take snapshot of session state periodically in the background

This comes as an complement of the existing way of taking snapshot
on keyboard activity.

The time inverval is currently 2 seconds. That interval should be
increased if it causes noticable performance penalty.

BUG: 271275
FIXED-IN:4.8.1